tests/baselines/reference/classStaticBlock5(target=es2015).errors.txt
tests/cases/conformance/classes/classStaticBlock/classStaticBlock5.ts(8,16): error TS2338: 'super' property access is permitted only in a constructor, member function, or member accessor of a derived class.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock5.ts(11,14): error TS2576: Property 'b' does not exist on type 'C'. Did you mean to access the static member 'C.b' instead?
tests/cases/conformance/classes/classStaticBlock/classStaticBlock5.ts(12,9): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock5.ts(13,9): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.


==== tests/cases/conformance/classes/classStaticBlock/classStaticBlock5.ts (4 errors) ====
    class B {
        static a = 1;
        static b = 2;
    }
    
    class C extends B {
        static b = 3;
        static c = super.a
                   ~~~~~
!!! error TS2338: 'super' property access is permitted only in a constructor, member function, or member accessor of a derived class.
    
        static {
            this.b;
                 ~
!!! error TS2576: Property 'b' does not exist on type 'C'. Did you mean to access the static member 'C.b' instead?
            super.b;
            ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
            super.a;
            ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
        }
    }
    